--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="css/theme/blood.css">
+        <link rel="stylesheet" href="css/theme/league.css">
     </head>
     <body>
         <div class="reveal">
